--- a/package.json
+++ b/package.json
@@ -28,5 +28,13 @@
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
+  },
+  "homepage": "https://github.com/KevinNovak/vrgamedeals-Tools#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/KevinNovak/vrgamedeals-Tools.git"
+  },
+  "bugs": {
+    "url": "https://github.com/KevinNovak/vrgamedeals-Tools/issues"
   }
 }
