--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "cheerio": "1.0.0-rc.3",
         "express": "4.17.1",
         "pm2": "^4.4.0",
+        "puppeteer": "3.1.0",
         "request": "2.88.2",
         "request-promise": "4.2.5"
     },
