--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "vr-game-deals-tools",
     "version": "1.0.0",
     "description": "Tools for r/vrgamedeals",
+    "engines": {
+        "node": ">=12.14.0"
+    },
     "main": "app.js",
     "scripts": {
         "start": "node app.js",
