--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "body-parser": "^1.19.0",
         "cheerio": "1.0.0-rc.3",
+        "dotenv": "^8.2.0",
         "express": "4.17.1",
         "pm2": "^4.4.0",
         "promise-timeout": "1.3.0",
