--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Created by https://www.gitignore.io/api/node
 # Edit at https://www.gitignore.io/?templates=node
 
-### Environment Files ###
+### Custom ###
 *.env
+data
 
 ### Node ###
 # Logs
