--- a/package.json
+++ b/package.json
@@ -1,28 +1,23 @@
 {
-    "name": "vr-game-deals-tools",
-    "version": "1.0.0",
-    "description": "Tools for r/vrgamedeals",
+    "name": "vrgamedeals-tools",
+    "version": "2.0.0",
+    "author": "Kevin Novak",
+    "description": "Tools for r/vrgamedeals.",
+    "license": "MIT",
+    "private": true,
     "engines": {
         "node": ">=12.14.0"
     },
-    "main": "app.js",
+    "main": "dist/app.js",
     "scripts": {
-        "start": "node app.js",
-        "start-pm2": "pm2 start process.json",
-        "dev": "nodemon app.js"
+        "start": "tsc && node dist/app.js",
+        "start-pm2": "tsc && pm2 start process.json",
+        "stop-pm2": "pm2 stop process.json",
+        "delete-pm2": "pm2 delete process.json",
+        "build": "tsc"
     },
-    "keywords": [
-        "deals",
-        "game",
-        "reality",
-        "virtual",
-        "vr",
-        "vrgamedeals"
-    ],
-    "author": "Kevin Novak",
-    "license": "MIT",
     "dependencies": {
-        "body-parser": "^1.19.0",
+        "body-parser": "1.19.0",
         "cheerio": "1.0.0-rc.3",
         "dotenv": "^8.2.0",
         "express": "4.17.1",
@@ -33,14 +28,14 @@
         "request-promise": "4.2.5"
     },
     "devDependencies": {
-        "nodemon": "^2.0.4"
-    },
-    "homepage": "https://github.com/KevinNovak/vrgamedeals-Tools#readme",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/KevinNovak/vrgamedeals-Tools.git"
-    },
-    "bugs": {
-        "url": "https://github.com/KevinNovak/vrgamedeals-Tools/issues"
+        "@types/body-parser": "1.19.0",
+        "@types/cheerio": "0.22.22",
+        "@types/express": "4.17.8",
+        "@types/node": "14.11.2",
+        "@types/promise-timeout": "1.3.0",
+        "@types/request": "2.48.5",
+        "@types/request-promise": "4.1.46",
+        "tslint": "^6.1.3",
+        "typescript": "^4.0.3"
     }
 }
