--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "start-pm2": "tsc && pm2 start process.json",
         "stop-pm2": "pm2 stop process.json",
         "delete-pm2": "pm2 delete process.json",
-        "build": "tsc"
+        "build": "tsc",
+        "postinstall": "npm run build"
     },
     "dependencies": {
         "body-parser": "1.19.0",
