--- a/package.json
+++ b/package.json
@@ -22,20 +22,18 @@
         "cheerio": "1.0.0-rc.3",
         "dotenv": "^8.2.0",
         "express": "4.17.1",
+        "node-fetch": "2.6.1",
         "pm2": "^4.5.0",
         "promise-timeout": "1.3.0",
-        "puppeteer": "5.3.1",
-        "request": "2.88.2",
-        "request-promise": "4.2.5"
+        "puppeteer": "5.3.1"
     },
     "devDependencies": {
         "@types/body-parser": "1.19.0",
         "@types/cheerio": "0.22.22",
         "@types/express": "4.17.8",
         "@types/node": "14.11.2",
+        "@types/node-fetch": "2.5.7",
         "@types/promise-timeout": "1.3.0",
-        "@types/request": "2.48.5",
-        "@types/request-promise": "4.1.46",
         "tslint": "^6.1.3",
         "typescript": "^4.0.3"
     }
