--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@types/node": "14.11.2",
         "@types/node-fetch": "2.5.7",
         "@types/promise-timeout": "1.3.0",
+        "@types/puppeteer": "^3.0.2",
         "tslint": "^6.1.3",
         "typescript": "^4.0.3"
     }
