--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "cheerio": "1.0.0-rc.3",
         "dotenv": "^8.2.0",
         "express": "4.17.1",
+        "express-promise-router": "4.0.1",
         "node-fetch": "2.6.1",
         "pm2": "^4.5.0",
         "promise-timeout": "1.3.0",
@@ -29,6 +30,7 @@
     "devDependencies": {
         "@types/cheerio": "0.22.22",
         "@types/express": "4.17.8",
+        "@types/express-promise-router": "3.0.0",
         "@types/node": "14.11.2",
         "@types/node-fetch": "2.5.7",
         "@types/promise-timeout": "1.3.0",
