--- a/package.json
+++ b/package.json
@@ -10,31 +10,30 @@
     },
     "main": "dist/app.js",
     "scripts": {
-        "start": "node dist/app.js",
-        "start-pm2": "tsc && pm2 start process.json",
-        "stop-pm2": "pm2 stop process.json",
-        "delete-pm2": "pm2 delete process.json",
+        "lint": "tslint --project .",
+        "lint:fix": "tslint --fix --project .",
+        "format": "prettier --check .",
+        "format:fix": "prettier --write .",
         "build": "tsc",
-        "postinstall": "npm run build"
+        "start": "npm run build && node --enable-source-maps dist/app.js",
+        "start:pm2": "npm run build && pm2 start process.json",
+        "stop:pm2": "pm2 stop process.json",
+        "delete:pm2": "pm2 delete process.json"
     },
     "dependencies": {
         "cheerio": "1.0.0-rc.3",
-        "dotenv": "^8.2.0",
         "express": "4.17.1",
         "express-promise-router": "4.0.1",
         "node-fetch": "2.6.1",
-        "pm2": "^4.5.0",
-        "promise-timeout": "1.3.0",
-        "puppeteer": "5.4.0"
+        "pm2": "^4.5.0"
     },
     "devDependencies": {
         "@types/cheerio": "0.22.22",
         "@types/express": "4.17.8",
-        "@types/node": "14.14.2",
+        "@types/node": "14.14.5",
         "@types/node-fetch": "2.5.7",
-        "@types/promise-timeout": "1.3.0",
-        "@types/puppeteer": "^3.0.2",
+        "prettier": "^2.1.2",
         "tslint": "^6.1.3",
-        "typescript": "^4.0.3"
+        "typescript": "^4.0.5"
     }
 }
