--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "format": "prettier --check .",
         "format:fix": "prettier --write .",
         "build": "tsc",
+        "postinstall": "tsc",
         "start": "npm run build && node --enable-source-maps dist/app.js",
         "start:pm2": "npm run build && pm2 start process.json",
         "stop:pm2": "pm2 stop process.json",
