--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "format": "prettier --check .",
         "format:fix": "prettier --write .",
         "build": "tsc",
-        "postinstall": "tsc",
-        "start": "npm run build && node --enable-source-maps dist/app.js",
+        "postinstall": "npm run build",
+        "start": "node --enable-source-maps dist/app.js",
         "start:pm2": "npm run build && pm2 start process.json",
         "stop:pm2": "pm2 stop process.json",
         "delete:pm2": "pm2 delete process.json"
