--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
         "lint:fix": "tslint --fix --project .",
         "format": "prettier --check .",
         "format:fix": "prettier --write .",
-        "build": "tsc",
+        "build": "tsc --project tsconfig.json",
         "postinstall": "npm run build",
-        "start": "node --enable-source-maps dist/app.js",
-        "start:pm2": "npm run build && pm2 start process.json",
-        "stop:pm2": "pm2 stop process.json",
-        "delete:pm2": "pm2 delete process.json"
+        "start": "npm run build && node --enable-source-maps dist/app.js",
+        "start:pm2": "npm run build && npm run pm2:start",
+        "pm2:start": "pm2 start process.json",
+        "pm2:stop": "pm2 stop process.json",
+        "pm2:delete": "pm2 delete process.json"
     },
     "dependencies": {
         "cheerio": "1.0.0-rc.3",
