--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
         "lint:fix": "tslint --fix --project .",
         "format": "prettier --check .",
         "format:fix": "prettier --write .",
-        "build": "tsc --project tsconfig.json",
+        "build": "tsc",
         "postinstall": "npm run build",
-        "start": "npm run build && node --enable-source-maps dist/app.js",
-        "start:pm2": "npm run build && npm run pm2:start",
+        "start": "node --enable-source-maps dist/app.js",
+        "start:pm2": "npm run pm2:start",
         "pm2:start": "pm2 start process.json",
         "pm2:stop": "pm2 stop process.json",
         "pm2:delete": "pm2 delete process.json"
