--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "lint:fix": "tslint --fix --project .",
         "format": "prettier --check .",
         "format:fix": "prettier --write .",
+        "clean": "git clean -xdf --exclude=\"/config/**/*\"",
+        "clean:dry": "git clean -xdf --exclude=\"/config/**/*\" --dry-run",
         "build": "tsc",
         "postinstall": "npm run build",
         "start": "node --enable-source-maps dist/app.js",
