--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "preLaunchTask": "build",
             "cwd": "${workspaceFolder}",
             "runtimeExecutable": "node",
-            "args": ["--enable-source-maps", "${workspaceFolder}/dist/app.js"],
+            "args": ["--enable-source-maps", "${workspaceFolder}/dist/start.js"],
             "resolveSourceMapLocations": ["${workspaceFolder}/**", "!**/node_modules/**"],
             "outputCapture": "std",
             "internalConsoleOptions": "openOnSessionStart",
