--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
     "cSpell.enabled": true,
     "cSpell.words": [
         "Novak",
+        "parens",
         "vrgamedeals"
-    ]
+    ],
+    "typescript.preferences.importModuleSpecifierEnding": "js"
 }
