--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "es2020",
-        "module": "commonjs",
+        "target": "es2021",
+        "module": "es2022",
         "lib": ["es2021"],
         "declaration": true,
         "sourceMap": true,
