--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
         "./dist/start.js"
     ],
     "scripts": {
-        "lint": "tslint --project .",
-        "lint:fix": "tslint --fix --project .",
+        "lint": "eslint . --cache --ext .js,.jsx,.ts,.tsx",
+        "lint:fix": "eslint . --fix --cache --ext .js,.jsx,.ts,.tsx",
         "format": "prettier --check .",
         "format:fix": "prettier --write .",
         "clean": "git clean -xdf --exclude=\"/config/**/*\"",
@@ -38,8 +38,12 @@
         "@types/express": "4.17.14",
         "@types/node": "18.11.9",
         "@types/node-fetch": "2.6.2",
+        "@typescript-eslint/eslint-plugin": "^5.42.0",
+        "@typescript-eslint/parser": "^5.42.0",
+        "eslint": "^8.26.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-unicorn": "^44.0.2",
         "prettier": "^2.7.1",
-        "tslint": "^6.1.3",
         "typescript": "^4.9.3"
     }
 }
