--- a/package.json
+++ b/package.json
@@ -8,33 +8,42 @@
     "engines": {
         "node": ">=12.14.0"
     },
-    "main": "dist/app.js",
+    "type": "module",
+    "exports": [
+        "./dist/start.js"
+    ],
     "scripts": {
-        "lint": "tslint --project .",
-        "lint:fix": "tslint --fix --project .",
+        "lint": "eslint . --cache --ext .js,.jsx,.ts,.tsx",
+        "lint:fix": "eslint . --fix --cache --ext .js,.jsx,.ts,.tsx",
         "format": "prettier --check .",
         "format:fix": "prettier --write .",
-        "build": "tsc",
+        "clean": "git clean -xdf --exclude=\"/config/**/*\"",
+        "clean:dry": "git clean -xdf --exclude=\"/config/**/*\" --dry-run",
+        "build": "tsc --project tsconfig.json",
         "postinstall": "npm run build",
-        "start": "node --enable-source-maps dist/app.js",
+        "start": "node --enable-source-maps dist/start.js",
         "start:pm2": "npm run pm2:start",
         "pm2:start": "pm2 start process.json",
         "pm2:stop": "pm2 stop process.json",
         "pm2:delete": "pm2 delete process.json"
     },
     "dependencies": {
-        "cheerio": "1.0.0-rc.3",
-        "express": "4.17.1",
-        "express-promise-router": "4.1.0",
-        "node-fetch": "2.6.5",
-        "pm2": "^5.1.2"
+        "cheerio": "1.0.0-rc.12",
+        "express": "4.18.2",
+        "express-promise-router": "4.1.1",
+        "node-fetch": "3.3.0",
+        "pm2": "^5.2.2"
     },
     "devDependencies": {
-        "@types/express": "4.17.13",
-        "@types/node": "16.11.7",
-        "@types/node-fetch": "2.5.12",
-        "prettier": "^2.4.1",
-        "tslint": "^6.1.3",
-        "typescript": "^4.4.4"
+        "@types/express": "4.17.14",
+        "@types/node": "18.11.9",
+        "@types/node-fetch": "2.6.2",
+        "@typescript-eslint/eslint-plugin": "^5.42.0",
+        "@typescript-eslint/parser": "^5.42.0",
+        "eslint": "^8.26.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-unicorn": "^44.0.2",
+        "prettier": "^2.7.1",
+        "typescript": "^4.9.3"
     }
 }
