--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,12 @@
         "editor.formatOnSave": true
     },
     "cSpell.enabled": true,
-    "cSpell.words": ["Novak", "parens", "vrgamedeals"],
+    "cSpell.words": [
+        "Chrono",
+        "Luxon",
+        "Novak",
+        "parens",
+        "vrgamedeals"
+    ],
     "typescript.preferences.importModuleSpecifierEnding": "js"
 }
