--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
     },
     "dependencies": {
         "cheerio": "1.0.0-rc.12",
+        "chrono-node": "^2.5.0",
         "express": "4.18.2",
         "express-promise-router": "4.1.1",
+        "luxon": "3.2.1",
         "node-fetch": "3.3.0",
         "pm2": "^5.2.2"
     },
     "devDependencies": {
         "@types/express": "4.17.14",
+        "@types/luxon": "3.2.0",
         "@types/node": "18.11.9",
         "@types/node-fetch": "2.6.2",
         "@typescript-eslint/eslint-plugin": "^5.42.0",
